@@ -1,3 +1,11 @@
+2006-08-22  Waldo Bastian <waldo.bastian@intel.com>
+        * clarification of Exec key
+        * correction of StartupWMClass, clarify StartupNotify (Lubos Lunak)
+        * deprecate SortOrder and FilePattern key (Vincent Untz)
+        * remove section on "MIME Type caching" from spec (Vincent Untz)
+        * groups and keys must be unique (Vincent Untz)
+        See http://lists.freedesktop.org/archives/xdg/2006-August/008446.html
+
 2006-05-28  Vincent Untz <vuntz@gnome.org>
         * cleanup of text and some reorg for clearity
         * move all of the legacy-mixed encoding stuff to the appendix
